--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,13 @@ subprojects {
         mavenCentral()
     }
 
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JDK_VERSION
+    targetCompatibility = JDK_VERSION
 
     dependencies {
 
         implementation 'org.apache.commons:commons-lang3:3.12.0'
-        implementation 'org.springframework.boot:spring-boot-starter:2.7.14'
+        implementation "org.springframework.boot:spring-boot-starter:${SPRINGBOOT_VERSION}"
         implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
         compileOnly 'org.projectlombok:lombok:1.18.26'
