--- a/kguarder-core/build.gradle
+++ b/kguarder-core/build.gradle
@@ -1,1 +1,5 @@
-
+dependencies {
+    testImplementation 'org.mockito:mockito-core:5.4.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'
+    testImplementation "org.springframework.boot:spring-boot-starter-test:${SPRINGBOOT_VERSION}"
+}
