--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.java-version }}
+          distribution: 'temurin'
 
       - name: Build Project
         uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25
@@ -40,6 +41,7 @@ jobs:
     strategy:
       matrix:
         java-version: [ 8, 11, 17 ]
+        distribution: 'temurin'
 
     steps:
       - uses: actions/checkout@v3
