--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-PROJECT_GROUP=top.kguarder
+PROJECT_GROUP=top.ko8e24.kguarder
 PROJECT_VERSION=0.0.1-SNAPSHOT
 SPRINGBOOT_VERSION=2.7.14
 JDK_VERSION=11
