--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ buildscript {
 subprojects {
     apply plugin: 'java-library'
     apply plugin: 'maven-publish'
+    apply plugin: 'signing'
+
 
     group = PROJECT_GROUP
     version = PROJECT_VERSION
@@ -33,7 +35,7 @@ subprojects {
     }
 
     tasks.named('jar') {
-        if (project.name.contains("core")){
+        if (project.name.contains("core")) {
             archivesBaseName = 'kguarder'
         }
         manifest {
@@ -49,14 +51,29 @@ subprojects {
         }
     }
 
+    task javadocJar(type: Jar) {
+        classifier = 'javadoc'
+        from javadoc
+    }
+
+    task sourcesJar(type: Jar) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    artifacts {
+        archives javadocJar, sourcesJar
+    }
+
+
     publishing {
         publications {
             mavenJava(MavenPublication) {
                 from components.java
                 pom {
-                    if (project.name.contains("core")){
+                    if (project.name.contains("core")) {
                         artifactId = 'kguarder'
-                    }else {
+                    } else {
                         artifactId = project.name
                     }
 
@@ -65,23 +82,52 @@ subprojects {
                     name = project.name
                     description = 'A method based guarder for error-handling.'
                     url = 'https://github.com/koooooo-7/kguarder'
+
+
                     licenses {
                         license {
-                            name = 'MIT'
+                            name = 'MIT Licence'
+                            url = 'https://github.com/Koooooo-7/kguarder/blob/main/LICENSE'
                         }
                     }
+
                     developers {
                         developer {
                             name = 'Koy Zhuang'
                             email = 'koy@ko8e24.top'
                         }
                     }
+
+                    scm {
+                        connection = 'https://github.com/Koooooo-7/kguarder.git'
+                        developerConnection = 'git@github.com:Koooooo-7/kguarder.git'
+                        url = 'https://github.com/koooooo-7/kguarder'
+                    }
                 }
             }
         }
         repositories {
+            maven {
+                def releasesRepoUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
+                def snapshotsRepoUrl = 'https://oss.sonatype.org/content/repositories/snapshots'
+                url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+
+                credentials {
+                    def uname = version.endsWith('SNAPSHOT') ? "${ossrhUsername}" : "${sonatypeUsername}"
+                    def pwd = version.endsWith('SNAPSHOT') ? "${ossrhPassword}" : "${sonatypePassword}"
+                    username uname
+                    password pwd
+                }
+
+
+            }
+
             mavenLocal()
         }
+    }
+
+    signing {
+        sign publishing.publications.mavenJava
     }
 
     test {
