--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,9 @@ PROJECT_GROUP=top.ko8e24.kguarder
 PROJECT_VERSION=0.0.1
 SPRINGBOOT_VERSION=2.7.14
 JDK_VERSION=11
+
+# Placeholder
+sonatypeUsername=
+sonatypePassword=
+ossrhUsername=
+ossrhPassword=
