--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,11 @@ jobs:
         with:
           arguments: test
 
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
   build-windows:
     runs-on: windows-latest
 
@@ -59,7 +64,6 @@ jobs:
         with:
           arguments: test
 
-  upload-coverage:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
