--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Build Project
         uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25
         with:
-          arguments: builud
+          arguments: build
 
       - name: Run Tests
         uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25
